--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "&mdash;"
+title: "—"
 email: noemailbro@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Desert island text stream
